# otus_lesson2

./: CMakeLists.txt  ip_filter.cpp  output_unix.txt
.github/workflows/: ci.yml
